Autofocus on first form element, when showing a modal box

--- a/tests-cucumber-ui/app/views/test-runs.html
+++ b/tests-cucumber-ui/app/views/test-runs.html
@@ -61,7 +61,7 @@
     <div class="modal-body">
       <div class="form-group">
         <label for="env">Environnement</label>
-        <input type="text" class="form-control" id="env" ng-model="createCtrl.testRun.env">
+        <input type="text" class="form-control" id="env" ng-model="createCtrl.testRun.env" autofocus>
       </div>
     </div>
     <div class="modal-footer">
