--- a/tests-cucumber-ui/app/views/test-run.html
+++ b/tests-cucumber-ui/app/views/test-run.html
@@ -184,28 +184,33 @@
     </div>
 
     <div class="modal-body">
+
       <div class="form-group">
         <label for="file">Fichier à importer</label>
-        <input type="file" id="file" ng-model="importCtrl.file" ngf-select ngf-pattern="'.json'">
+        <input type="file" id="file" ng-model="importCtrl.file" ngf-select ngf-pattern="'.json'" autofocus>
         <p class="help-block">Le fichier à importer est un résultat d'exécution Cucumber, au format JSON.</p>
       </div>
+
       <div class="form-group">
         <label for="group">Groupe</label>
         <input type="text" id="group" ng-model="importCtrl.importOptions.group" class="form-control"
                placeholder="Nom d'un groupe pour les fonctionnalités importées">
       </div>
+
       <div class="checkbox">
         <label>
           <input type="checkbox" ng-model="importCtrl.importOptions.onlyNewScenarii">
           Limiter l'import aux nouveaux scénarii
         </label>
       </div>
+
       <div class="checkbox">
         <label>
           <input type="checkbox" ng-model="importCtrl.importOptions.dryRun">
           Tir à blanc
         </label>
       </div>
+
     </div>
 
     <div class="modal-footer">
