--- a/tests-cucumber-ui/app/views/tc-tags.html
+++ b/tests-cucumber-ui/app/views/tc-tags.html
@@ -1,3 +1,3 @@
 <span ng-repeat="tag in tags | orderBy track by tag">
-  <span class="label label-info">@{{ tag }}</span>
+  <span ng-class="ctrl.isPrimary(tag) ? 'label label-primary' : 'label label-info'">@{{ tag }}</span>
 </span>
