Autofocus on cancel button

--- a/tests-cucumber-ui/app/views/confirmation-modal.html
+++ b/tests-cucumber-ui/app/views/confirmation-modal.html
@@ -10,7 +10,7 @@
 </div>
 
 <div class="modal-footer">
-  <button type="button" class="btn btn-default" ng-click="$dismiss()">
+  <button type="button" class="btn btn-default" ng-click="$dismiss()" autofocus>
     Annuler
   </button>
   <button type="button" class="btn btn-primary" ng-click="$close({})">
