--- a/tests-cucumber-ui/app/views/test-run-tags.html
+++ b/tests-cucumber-ui/app/views/test-run-tags.html
@@ -16,6 +16,28 @@
 
   <hr>
 
+  <h2>Statistiques sur les scénarii</h2>
+
+
+  <div class="form" style="margin-bottom: 10px">
+    <div class="form-group">
+
+      <div class="input-group">
+        <input type="text" class="form-control" placeholder="Filter par tag"
+               ng-model="ctrl.filteredTags"
+               ng-model-options="{ debounce: 250 }">
+
+        <span class="input-group-btn">
+          <button class="btn btn-default" type="button" ng-click="ctrl.clearTagsFilter()">
+            <span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span>
+          </button>
+        </span>
+
+      </div>
+
+    </div>
+  </div>
+
   <table class="table table-striped table-bordered">
     <thead>
     <tr>
@@ -29,7 +51,7 @@
     </thead>
     <tbody>
     <tr
-      ng-repeat="tag in ctrl.testRun.tags track by tag.tag">
+      ng-repeat="tag in ctrl.testRun.tags | filter:ctrl.isAcceptedTag track by tag.tag">
       <td>
         <tc-tags tags="[tag.tag]"></tc-tags>
       </td>
