--- a/tests-cucumber-ui/app/views/test-run-tags.html
+++ b/tests-cucumber-ui/app/views/test-run-tags.html
@@ -41,7 +41,8 @@
   <table class="table table-striped table-bordered">
     <thead>
     <tr>
-      <th class="col-md-7">Tag</th>
+      <th class="col-md-6">Tag</th>
+      <th class="col-md-1">Statut</th>
       <th class="col-md-1">Total</th>
       <th class="col-md-1">Succès</th>
       <th class="col-md-1">Échecs</th>
@@ -54,6 +55,9 @@
       ng-repeat="tag in ctrl.testRun.tags | filter:ctrl.isAcceptedTag track by tag.tag">
       <td>
         <tc-tags tags="[tag.tag]"></tc-tags>
+      </td>
+      <td>
+        <tc-status status="tag.status"></tc-status>
       </td>
       <td><span class="badge">{{ tag.stats.count }}</span></td>
       <td><span class="badge">{{ tag.stats.statsByStatus['PASSED'] }}</span></td>
