--- a/tests-cucumber-ui/app/views/test-runs.html
+++ b/tests-cucumber-ui/app/views/test-runs.html
@@ -29,7 +29,7 @@
       <th class="col-md-1">Total</th>
       <th class="col-md-1">Succès</th>
       <th class="col-md-1">Échecs</th>
-      <th class="col-md-1">Partiels</th>
+      <th class="col-md-1">En attente</th>
       <th class="col-md-1">Non joués</th>
     </tr>
     </thead>
@@ -44,7 +44,7 @@
       <td><span class="badge">{{ testRun.stats.count }}</span></td>
       <td><span class="badge">{{ testRun.stats.statsByStatus['PASSED'] }}</span></td>
       <td><span class="badge">{{ testRun.stats.statsByStatus['FAILED'] }}</span></td>
-      <td><span class="badge">{{ testRun.stats.statsByStatus['PARTIAL'] }}</span></td>
+      <td><span class="badge">{{ testRun.stats.statsByStatus['PENDING'] }}</span></td>
       <td><span class="badge">{{ testRun.stats.statsByStatus['NOT_RUN'] }}</span></td>
     </tr>
     </tbody>
