Renamed UI element

--- a/tests-cucumber-ui/app/views/feature.html
+++ b/tests-cucumber-ui/app/views/feature.html
@@ -158,7 +158,7 @@
       <th class="col-md-1">Environnement</th>
       <th class="col-md-5">Tir</th>
       <th class="col-md-1">Statut</th>
-      <th class="col-md-1">Nombre de scénarii</th>
+      <th class="col-md-1">Total</th>
       <th class="col-md-1">Succès</th>
       <th class="col-md-1">Échecs</th>
       <th class="col-md-1">En attente</th>
