Reporting view for tags

--- a/tests-cucumber-ui/app/views/feature.html
+++ b/tests-cucumber-ui/app/views/feature.html
@@ -39,7 +39,7 @@
 
   <p ng-if="ctrl.feature.tags.length > 0">
     <b>Tags :</b>
-    <tc-tags tags="ctrl.feature.tags"></tc-tags>
+    <tc-tags test-run-id="ctrl.feature.testRunId" tags="ctrl.feature.tags"></tc-tags>
   </p>
 
   <!-- Buttons -->
