--- a/tests-cucumber-ui/app/views/scenario.html
+++ b/tests-cucumber-ui/app/views/scenario.html
@@ -38,7 +38,7 @@
 
   <p ng-if="ctrl.scenario.allTags.length > 0">
     <b>Tags :</b>
-    <tc-tags tags="ctrl.scenario.allTags" primary-tags="ctrl.scenario.tags"></tc-tags>
+    <tc-tags test-run-id="ctrl.scenario.testRunId" tags="ctrl.scenario.allTags" primary-tags="ctrl.scenario.tags"></tc-tags>
   </p>
 
   <hr>
