Active page in breadcrum

--- a/tests-cucumber-ui/app/views/test-runs.html
+++ b/tests-cucumber-ui/app/views/test-runs.html
@@ -1,7 +1,7 @@
 <div>
 
   <ol class="breadcrumb">
-    <li>Derniers tirs de tests</li>
+    <li class="active">Derniers tirs de tests</li>
   </ol>
 
   <h1>Derniers tirs de tests</h1>
