--- a/tests-cucumber-ui/app/views/test-run-tag.html
+++ b/tests-cucumber-ui/app/views/test-run-tag.html
@@ -30,7 +30,43 @@
                danger="ctrl.stats.statsByStatus['FAILED']">
   </tc-progress>
 
-  <!-- Tags -->
+  <!-- Features -->
+
+  <hr>
+
+  <h2>Fonctionnalités</h2>
+
+  <table class="table table-striped table-bordered">
+    <thead>
+    <tr>
+      <th class="col-md-1">Groupe</th>
+      <th class="col-md-65">Fonctionnalité</th>
+      <th class="col-md-1">Total</th>
+      <th class="col-md-1">Succès</th>
+      <th class="col-md-1">Échecs</th>
+      <th class="col-md-1">En attente</th>
+      <th class="col-md-1">Non joués</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr
+      ng-repeat="feature in ctrl.features track by feature.id">
+      <td>{{ feature.group }}</td>
+      <td>
+        <a ng-href="#/features/{{ feature.id }}">
+          {{ feature.info.name }}
+        </a>
+      </td>
+      <td><span class="badge">{{ feature.stats.count }}</span></td>
+      <td><span class="badge">{{ feature.stats.statsByStatus['PASSED'] }}</span></td>
+      <td><span class="badge">{{ feature.stats.statsByStatus['FAILED'] }}</span></td>
+      <td><span class="badge">{{ feature.stats.statsByStatus['PENDING'] }}</span></td>
+      <td><span class="badge">{{ feature.stats.statsByStatus['NOT_RUN'] }}</span></td>
+    </tr>
+    </tbody>
+  </table>
+
+  <!-- Scénarii -->
 
   <hr>
 
