--- a/tests-cucumber-ui/app/views/test-run-tag.html
+++ b/tests-cucumber-ui/app/views/test-run-tag.html
@@ -1,7 +1,7 @@
 <div>
 
   <ol class="breadcrumb">
-    <li>Environnement {{ ctrl.testRun.env }}</li>
+    <li>Type {{ ctrl.testRun.type }}</li>
     <li>
       <a ng-href="#/test-runs/{{ ctrl.testRun.id }}">
         Tir du {{ ctrl.testRun.date | niceDate }}
