--- a/tests-cucumber-ui/app/views/feature.html
+++ b/tests-cucumber-ui/app/views/feature.html
@@ -1,7 +1,7 @@
 <div>
 
   <ol class="breadcrumb">
-    <li>Environnement {{ ctrl.feature.testRun.env }}</li>
+    <li>Type {{ ctrl.feature.testRun.type }}</li>
     <li>
       <a ng-href="#/test-runs/{{ ctrl.feature.testRun.id }}">
         Tir du {{ ctrl.feature.testRun.date | niceDate }}
@@ -147,7 +147,7 @@
       <b>Filtrer :</b>
       <label class="checkbox-inline">
         <input type="checkbox" ng-model="ctrl.historyFilters.sameTestRun" ng-change="ctrl.updateStoredFilters()">
-        Même environnement de tir
+        Même type de tir
       </label>
     </div>
   </div>
@@ -155,7 +155,7 @@
   <table class="table table-bordered">
     <thead>
     <tr>
-      <th class="col-md-1">Environnement</th>
+      <th class="col-md-1">Type</th>
       <th class="col-md-5">Tir</th>
       <th class="col-md-1">Statut</th>
       <th class="col-md-1">Total</th>
@@ -169,7 +169,7 @@
     <tr ng-repeat="feature in ctrl.history | filter:ctrl.isHistoryItemDisplayable track by feature.testRun.id"
         ng-class="ctrl.feature.testRunId == feature.testRun.id && 'active'">
       <td>
-        <span class="label label-default">{{ feature.testRun.env }}</span>
+        <span class="label label-default">{{ feature.testRun.type }}</span>
       </td>
       <td>
         <a ng-href="#/features/{{ feature.id }}">
