--- a/tests-cucumber-ui/app/views/test-run.html
+++ b/tests-cucumber-ui/app/views/test-run.html
@@ -1,7 +1,7 @@
 <div>
 
   <ol class="breadcrumb">
-    <li>Environnement {{ ctrl.testRun.env }}</li>
+    <li>Type {{ ctrl.testRun.type }}</li>
     <li class="active">Tir du {{ ctrl.testRun.date | niceDate }}</li>
   </ol>
 
