--- a/tests-cucumber-ui/app/views/test-runs.html
+++ b/tests-cucumber-ui/app/views/test-runs.html
@@ -24,7 +24,7 @@
   <table class="table table-striped table-bordered">
     <thead>
     <tr>
-      <th class="col-md-1">Environnement</th>
+      <th class="col-md-1">Type</th>
       <th class="col-md-6">Tir de test</th>
       <th class="col-md-1">Total</th>
       <th class="col-md-1">Succès</th>
@@ -36,7 +36,7 @@
     <tbody>
     <tr ng-repeat="testRun in ctrl.latestTestRuns track by testRun.id">
       <td>
-        <span class="label label-default">{{ testRun.env }}</span>
+        <span class="label label-default">{{ testRun.type }}</span>
       </td>
       <td>
         <a ng-href="#/test-runs/{{ testRun.id }}">Tir du {{ testRun.date | niceDate }}</a>
@@ -60,8 +60,8 @@
     </div>
     <div class="modal-body">
       <div class="form-group">
-        <label for="env">Environnement</label>
-        <input type="text" class="form-control" id="env" ng-model="createCtrl.testRun.env" autofocus>
+        <label for="type">Type</label>
+        <input type="text" class="form-control" id="type" ng-model="createCtrl.testRun.type" autofocus>
       </div>
     </div>
     <div class="modal-footer">
