Display test run id

--- a/tests-cucumber-ui/app/views/test-run.html
+++ b/tests-cucumber-ui/app/views/test-run.html
@@ -7,6 +7,11 @@
 
   <h1>Tir du {{ ctrl.testRun.date | niceDate }}</h1>
 
+  <p>
+    <b>Identifiant du tir :</b>
+    <code>{{ ctrl.testRun.id }}</code>
+  </p>
+
   <hr>
 
   <div class="btn-toolbar" role="toolbar">
