--- a/tests-cucumber-ui/app/views/test-run.html
+++ b/tests-cucumber-ui/app/views/test-run.html
@@ -162,49 +162,52 @@
   <!-- Import cucumber results modal window -->
 
   <script type="text/ng-template" id="importCucumberResults.html">
+    <form>
 
-    <div class="modal-header">
-      <button type="button" class="close" ng-click="$dismiss()" aria-label="Fermer">
-        <span aria-hidden="true">&times;</span>
-      </button>
-      <h4 class="modal-title">Importer un résultat de tests Cucumber</h4>
-    </div>
 
-    <div class="modal-body">
-
-      <div class="form-group">
-        <label for="file">Fichier à importer</label>
-        <input type="file" id="file" ng-model="importCtrl.file" ngf-select ngf-pattern="'.json'" autofocus>
-        <p class="help-block">Le fichier à importer est un résultat d'exécution Cucumber, au format JSON.</p>
+      <div class="modal-header">
+        <button type="button" class="close" ng-click="$dismiss()" aria-label="Fermer">
+          <span aria-hidden="true">&times;</span>
+        </button>
+        <h4 class="modal-title">Importer un résultat de tests Cucumber</h4>
       </div>
 
-      <div class="form-group">
-        <label for="group">Groupe</label>
-        <input type="text" id="group" ng-model="importCtrl.importOptions.group" class="form-control"
-               placeholder="Nom d'un groupe pour les fonctionnalités importées">
+      <div class="modal-body">
+
+        <div class="form-group">
+          <label for="file">Fichier à importer</label>
+          <input type="file" id="file" ng-model="importCtrl.file" ngf-select ngf-pattern="'.json'" autofocus>
+          <p class="help-block">Le fichier à importer est un résultat d'exécution Cucumber, au format JSON.</p>
+        </div>
+
+        <div class="form-group">
+          <label for="group">Groupe</label>
+          <input type="text" id="group" ng-model="importCtrl.importOptions.group" class="form-control"
+                 placeholder="Nom d'un groupe pour les fonctionnalités importées">
+        </div>
+
+        <div class="checkbox">
+          <label>
+            <input type="checkbox" ng-model="importCtrl.importOptions.onlyNewScenarii">
+            Limiter l'import aux nouveaux scénarii
+          </label>
+        </div>
+
+        <div class="checkbox">
+          <label>
+            <input type="checkbox" ng-model="importCtrl.importOptions.dryRun">
+            Tir à blanc
+          </label>
+        </div>
+
       </div>
 
-      <div class="checkbox">
-        <label>
-          <input type="checkbox" ng-model="importCtrl.importOptions.onlyNewScenarii">
-          Limiter l'import aux nouveaux scénarii
-        </label>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" ng-click="$dismiss()">Annuler</button>
+        <button type="submit" class="btn btn-primary" ng-click="importCtrl.import()">Importer</button>
       </div>
 
-      <div class="checkbox">
-        <label>
-          <input type="checkbox" ng-model="importCtrl.importOptions.dryRun">
-          Tir à blanc
-        </label>
-      </div>
-
-    </div>
-
-    <div class="modal-footer">
-      <button type="button" class="btn btn-default" ng-click="$dismiss()">Annuler</button>
-      <button type="button" class="btn btn-primary" ng-click="importCtrl.import()">Importer</button>
-    </div>
-
+    </form>
   </script>
 
 </div>
