--- a/tests-cucumber-ui/app/views/tc-tags.html
+++ b/tests-cucumber-ui/app/views/tc-tags.html
@@ -1,4 +1,3 @@
 <span ng-repeat="tag in tags | orderBy track by tag">
-  <a ng-href="#/test-runs/{{ testRunId }}/tagDetails/?tag={{ tag }}"
-     ng-class="ctrl.isPrimary(tag) ? 'label label-primary' : 'label label-info'">@{{ tag }}</a>
+  <a ng-href="#/test-runs/{{ testRunId }}/tagDetails/?tag={{ tag }}" class="label label-info">@{{ tag }}</a>
 </span>
