tc-progress becomes a tc-scenario-progress and builds UI from stats

--- a/tests-cucumber-ui/app/views/feature.html
+++ b/tests-cucumber-ui/app/views/feature.html
@@ -61,11 +61,7 @@
 
   <h2>Avancement</h2>
 
-  <tc-progress total="ctrl.feature.stats.count"
-               success="ctrl.feature.stats.statsByStatus['PASSED']"
-               warning="ctrl.feature.stats.statsByStatus['PENDING']"
-               danger="ctrl.feature.stats.statsByStatus['FAILED']">
-  </tc-progress>
+  <tc-scenario-progress stats="ctrl.feature.stats"></tc-scenario-progress>
 
   <!-- Description -->
 
