--- a/tests-cucumber-ui/app/views/test-run-tag.html
+++ b/tests-cucumber-ui/app/views/test-run-tag.html
@@ -61,11 +61,7 @@
 
   <h2>Avancement par scénario</h2>
 
-  <tc-progress total="ctrl.stats.count"
-               success="ctrl.stats.statsByStatus['PASSED']"
-               warning="ctrl.stats.statsByStatus['PENDING']"
-               danger="ctrl.stats.statsByStatus['FAILED']">
-  </tc-progress>
+  <tc-scenario-progress stats="ctrl.stats"></tc-scenario-progress>
 
   <!-- Features -->
 
