--- a/tests-cucumber-ui/app/views/test-run-tag.html
+++ b/tests-cucumber-ui/app/views/test-run-tag.html
@@ -53,7 +53,7 @@
       </button>
     </div>
 
-    </form>
+  </form>
 
   <!-- Stats -->
 
@@ -87,7 +87,7 @@
       ng-repeat="feature in ctrl.features | filter:ctrl.isFeatureDisplayable as filteredFeatures track by feature.id">
       <td>{{ feature.group }}</td>
       <td>
-        <a href="" ng-click="ctrl.selectFeatureId(feature.id)">
+        <a href="" ng-click="ctrl.selectFeature(feature)">
           {{ feature.info.name }}
         </a>
       </td>
@@ -105,7 +105,7 @@
     <tr>
       <td class="warning" colspan="12" style="text-align: center">
         Attention : certains fonctionnalités sont masquées.
-        <a href="" ng-click="ctrl.clearSelectedFeatureIds()">Cliquez ici pour supprimer le filtre</a>
+        <a href="" ng-click="ctrl.clearSelectedFeature()">Cliquez ici pour supprimer le filtre</a>
       </td>
     </tr>
     </tfoot>
@@ -117,6 +117,9 @@
 
   <h2>Scénarii</h2>
 
+  <tc-scenario-filters filters="ctrl.scenarioFilters" on-update="ctrl.updateScenarioStoredFilters(filters)">
+  </tc-scenario-filters>
+
   <table class="table table-striped table-bordered">
     <thead>
     <tr>
@@ -127,7 +130,7 @@
     </thead>
     <tbody>
     <tr
-      ng-repeat="scenario in ctrl.scenarii | filter:ctrl.isScenarioDisplayable track by scenario.id">
+      ng-repeat="scenario in ctrl.scenarii | filter:ctrl.isScenarioInSelectedFeature | filter:ctrl.isScenarioStatusSelected as filteredScenarii track by scenario.id">
       <td>
         <a ng-href="#/features/{{ scenario.feature.id }}">
           {{ scenario.feature.info.name }}
@@ -143,6 +146,16 @@
       </td>
     </tr>
     </tbody>
+    <tfoot ng-if="filteredScenarii.length != ctrl.scenarii.length">
+    <tr>
+      <td class="warning" colspan="3" style="text-align: center">
+        Attention :
+        <ng-pluralize count="ctrl.scenarii.length - filteredScenarii.length"
+                      when="{ 'one': 'un scénario masqué', 'other': '{} scénarii masqués'}">
+        </ng-pluralize>
+      </td>
+    </tr>
+    </tfoot>
   </table>
 
 </div>
