--- a/tests-cucumber-ui/app/views/tc-scenario-progress.html
+++ b/tests-cucumber-ui/app/views/tc-scenario-progress.html
@@ -29,7 +29,7 @@
   </uib-progress>
 
 
-  <!-- Popup content for display options -->
+  <!-- Popup for detailed information about stats -->
   <script type="text/ng-template" id="scenarioProgessPopover.html">
 
     <ul class="list-unstyled">
