--- a/tests-cucumber-ui/app/views/scenario.html
+++ b/tests-cucumber-ui/app/views/scenario.html
@@ -8,7 +8,7 @@
       </a>
     </li>
     <li>
-      <a href="#/features/{{ ctrl.scenario.featureId }}">
+      <a ng-href="#/features/{{ ctrl.scenario.featureId }}">
         {{ ctrl.scenario.feature.info.keyword + ' ' + ctrl.scenario.feature.info.name }}
       </a>
     </li>
