--- a/tests-cucumber-ui/app/views/test-run-tag.html
+++ b/tests-cucumber-ui/app/views/test-run-tag.html
@@ -105,7 +105,7 @@
     <tr>
       <td class="warning" colspan="12" style="text-align: center">
         Attention : certains fonctionnalités sont masquées.
-        <a href="" ng-click="ctrl.clearSelectedFeature()">Cliquez ici pour supprimer le filtre</a>
+        <a href ng-click="ctrl.clearSelectedFeature()">Cliquez ici pour supprimer le filtre</a>
       </td>
     </tr>
     </tfoot>
