--- a/tests-cucumber-ui/app/views/test-run.html
+++ b/tests-cucumber-ui/app/views/test-run.html
@@ -25,6 +25,14 @@
     </div>
     <div class="btn-group" role="group">
 
+      <button ng-click="ctrl.openUpdateTestRunForm()" class="btn btn-default">
+        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+        Modifier les infos
+      </button>
+
+    </div>
+    <div class="btn-group" role="group">
+
       <button ng-click="ctrl.viewTags()" class="btn btn-default">
         <span class="glyphicon glyphicon-tags" aria-hidden="true"></span>
         Statistiques par tag
@@ -203,6 +211,28 @@
         <button type="submit" class="btn btn-primary" ng-click="importCtrl.import()">Importer</button>
       </div>
 
+    </form>
+  </script>
+
+  <!-- Edit test run modal window -->
+  <script type="text/ng-template" id="updateTestRunForm.html">
+    <form>
+      <div class="modal-header">
+        <button type="button" class="close" ng-click="$dismiss()" aria-label="Fermer">
+          <span aria-hidden="true">&times;</span>
+        </button>
+        <h4 class="modal-title">Modifier les informations du tir</h4>
+      </div>
+      <div class="modal-body">
+        <div class="form-group">
+          <label for="type">Type</label>
+          <input type="text" class="form-control" id="type" ng-model="updateCtrl.updateRequest.type" autofocus>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" ng-click="$dismiss()">Annuler</button>
+        <button type="submit" class="btn btn-primary" ng-click="updateCtrl.update()">Modifier</button>
+      </div>
     </form>
   </script>
 
